--- a/package.json
+++ b/package.json
@@ -1,5 +1,25 @@
 {
   "name": "fantasy",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "lodash": "^4.17.10",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0",
+    "webpack": "^4.8.3"
+  },
+  "scripts": {
+    "dev": "webpack --watch --mode development --module-bind js=babel-loader",
+    "build": "webpack --mode production --module-bind js=babel-loader"
+  },
+  "devDependencies": {
+    "webpack-cli": "^2.1.3"
+  }
 }
